--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node build.js"
+    "build": "node build.js",
+    "lang": "node buildLang.js"
   },
   "keywords": [],
   "author": "",
